--- a/COMP2006-S2016-FinalExamV2/Views/Genres/Details.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Genres/Details.cshtml
@@ -1,4 +1,14 @@
-﻿@model COMP2006_S2016_FinalExamV2.Models.Genre
+﻿<!--
+    file: views/genres/Details.cshtml
+    Displays the basic information stored in relation to an artist.
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+@model COMP2006_S2016_FinalExamV2.Models.Genre
 
 @{
     ViewBag.Title = "Details";
