--- a/COMP2006-S2016-FinalExamV2/Views/Home/About.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Home/About.cshtml
@@ -1,4 +1,14 @@
-﻿@{
+﻿<!--
+    file: views/home/About.cshtml
+    Displays basic information about the site and its creators.
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+@{
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
