--- a/COMP2006-S2016-FinalExamV2/Views/Home/Contact.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Home/Contact.cshtml
@@ -1,4 +1,14 @@
-﻿@{
+﻿<!--
+    file: views/home/Contact.cshtml
+    Gives a list of ways for the user to contact the owner of the site.
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+@{
     ViewBag.Title = "Contact";
 }
 <h2>@ViewBag.Title.</h2>
