--- a/COMP2006-S2016-FinalExamV2/Views/Shared/_Layout.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    file: views/shared/_Layout.cshtml
+    Gives a static set of features, including a navbar, to always be shown
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
