--- a/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
@@ -1,4 +1,15 @@
-﻿@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Album>
+﻿<!--
+    file: views/albums/Index.cshtml
+    Displays a list of all items in the Albums table in the database, with basic 
+    information regarding to each. 
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Album>
 
 @{
     ViewBag.Title = "Index";
@@ -47,9 +58,7 @@
             @Html.DisplayFor(modelItem => item.AlbumArtUrl)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.AlbumId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.AlbumId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.AlbumId })
+            @Html.ActionLink("Details", "Details", new { id=item.AlbumId }) 
         </td>
     </tr>
 }
