--- a/COMP2006-S2016-FinalExamV2/Views/Genres/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Genres/Index.cshtml
@@ -1,4 +1,15 @@
-﻿@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Genre>
+﻿<!--
+    file: views/genres/Index.cshtml
+    Displays a list of all items in the Genres table in the database, with basic
+    information regarding to each.
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+@model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Genre>
 
 @{
     ViewBag.Title = "Index";
@@ -29,10 +40,7 @@
             @Html.DisplayFor(modelItem => item.Description)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.GenreId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.GenreId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.GenreId })
-        </td>
+            @Html.ActionLink("Details", "Details", new { id=item.GenreId }) 
     </tr>
 }
 
