--- a/COMP2006-S2016-FinalExamV2/Views/Home/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Home/Index.cshtml
@@ -1,4 +1,14 @@
-﻿@{
+﻿<!--
+    file: views/home/Index.cshtml
+    Displays the home page for the music store.
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+@{
     ViewBag.Title = "Home Page";
 }
 
