--- a/COMP2006-S2016-FinalExamV2/Views/Shared/Error.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Shared/Error.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿<!--
+    file: views/shared/Error.cshtml
+    Displays an error message to show a failure has occured.
+    author: Alex Nicholls
+    student number: 200287546
+    date: August 18, 2016
+    history:
+        added controllers and navigation
+-->
+
+<!DOCTYPE html>
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
