--- a/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Albums/Index.cshtml
@@ -7,6 +7,8 @@
     date: August 18, 2016
     history:
         added controllers and navigation
+        added comments
+        final commit
 -->
 
 @model IEnumerable<COMP2006_S2016_FinalExamV2.Models.Album>
