--- a/COMP2006-S2016-FinalExamV2/Views/Shared/_Layout.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     date: August 18, 2016
     history:
         added controllers and navigation
+        added comments
+        final commit
 -->
 
 <!DOCTYPE html>
