--- a/COMP2006-S2016-FinalExamV2/Views/Genres/Details.cshtml
+++ b/COMP2006-S2016-FinalExamV2/Views/Genres/Details.cshtml
@@ -6,6 +6,8 @@
     date: August 18, 2016
     history:
         added controllers and navigation
+        added comments
+        final commit
 -->
 
 @model COMP2006_S2016_FinalExamV2.Models.Genre
